# WEB_HW_07

./: pyproject.toml
HW_07/: config.ini  main.py  seed.py
HW_07/src/: db.py  models.py
migration/: env.py
migration/versions/: e0a15135b939_init.py
